--- a/templates/seccion/servicios.html
+++ b/templates/seccion/servicios.html
@@ -1,4 +1,23 @@
-<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1"  ng-if="seccionWeb" style="background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[0].imagen_bg}});padding: 50px 0 10px;">
+<style>
+	#section-26 {
+		padding:  50px 0 10px;
+		background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[0].imagen_bg}});
+	}
+	#section-27 {
+		padding:  50px 0 10px;
+		background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[1].imagen_bg}});
+	}
+	@media (max-width: 767px) {
+		#section-26,#section-27 {
+			background-image: none;
+		}
+		#section-26:after, #section-27:after {
+			display: none;
+		}
+	}
+
+</style>
+<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1"  ng-if="seccionWeb">
 	<div class="full-section-container">
 
 		<div class="container-fluid">
@@ -19,7 +38,7 @@
 	</div><!-- full-section-container -->
 </section><!-- full-section -->
 
-<section class="full-section parallax" id="section-27" data-stellar-background-ratio="0.1" ng-if="seccionWeb" style="background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[1].imagen_bg}});padding: 50px 0 10px;">
+<section class="full-section parallax" id="section-27" data-stellar-background-ratio="0.1" ng-if="seccionWeb">
 	<div class="full-section-container">
 
 		<div class="container-fluid">
