--- a/templates/seccion/servicios.html
+++ b/templates/seccion/servicios.html
@@ -29,7 +29,7 @@
 
 					<br>
 
-					<a ng-href="templates/popups/donde-estamos.php" fancybox ng-show="seccionWeb[2].contenedor[0].tiene_boton" class="btn btn-default-1 waves"  >Donde estamos <i class="fa fa-angle-right"></i></a>
+					<a href="templates/popups/donde-estamos.php" fancybox ng-show="seccionWeb[2].contenedor[0].tiene_boton" class="btn btn-default-1 waves"  >Donde estamos <i class="fa fa-angle-right"></i></a>
 
 				</div><!-- col -->
 			</div><!-- row -->
