--- a/templates/seccion/trabaja-con-nosotros.html
+++ b/templates/seccion/trabaja-con-nosotros.html
@@ -1,4 +1,4 @@
-<div class="container" ng-if="seccionWeb" id="trabaja-con-nosotros">
+<div class="container" ng-if="seccionWeb">
     <div class="row">
         <div class="col-sm-12">
 
