--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6664,3 +6664,65 @@
 	.widget-social .social-media {
 		margin-bottom: 0;
 	}
+
+/* By Benxander rguevarac@hotmail.es */
+/* Customizations */
+	.preloader-wrapper{
+	  position: fixed;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 100%;
+	  z-index: 10000;
+	  background: #ffffff;
+	}
+	.loader {
+	    border-radius: 50%;
+	    width: 120px;
+	    height: 120px;
+	    animation: spin 2s linear infinite;
+	    position: absolute;
+	    left: 50%;
+	    top: 50%;
+	    margin: -60px;
+	    border: 16px solid #f6f6f6; /* Light grey */
+	    border-top: 16px solid #777777; /* Blue */
+	}
+	@keyframes spin {
+	    0% { transform: rotate(0deg); }
+	    100% { transform: rotate(360deg); }
+	}
+	.no-border-radius{
+	  border-radius: 0 !important
+	}
+	.block{
+	  position: relative;
+	}
+	.navbar-nav>li>a,
+	.navbar-nav>li>a:focus,
+	.navbar-nav>li>a:hover {
+	  background: none !important;
+	}
+	.navbar-nav>li>a::after {
+	  content: "";
+	  width: 100%;
+	  height: 0;
+	  display: block;
+	  border-bottom: 3px solid;
+	  position: absolute;
+	  bottom: -1px;
+	  left: 0;
+	  opacity: 0;
+	}
+	.navbar-nav>li.active>a::after,
+	.navbar-nav>li:active>a::after,
+	.navbar-nav>li:focus>a::after,
+	.navbar-nav>li:hover>a::after{
+	  opacity: 1;
+	}
+
+	.nav > li > a:hover,
+	.nav > li > a:focus {
+	    text-decoration: none;
+	    background-color: none;
+	}
