--- a/templates/seccion/inicio.html
+++ b/templates/seccion/inicio.html
@@ -1,5 +1,72 @@
+<style>
+	#section-26 {
+		padding:  50px 0 10px;
+		background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[0].imagen_bg}});
+	}
+	#section-27 {
+		padding:  50px 0 10px;
+		background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[1].imagen_bg}});
+	}
+	@media (max-width: 767px) {
+		#section-26,#section-27 {
+			background-image: none;
+		}
+		#section-26:after, #section-27:after {
+			display: none;
+		}
+	}
 
-<div class="container" ng-if="seccionWeb" id="inicio">
+</style>
+<div class="container-fluid block" data-ng-style="{'max-width':'1920px'}">
+    <!-- slider parent container -->
+    <section class="content-section" data-ng-style="{'max-width':'1920px', 'margin':'0 auto'}">
+      <!-- slider container -->
+		<div class="rev_slider_wrapper" style="background-color:#ddd;margin:0px auto;padding:0px;margin-top:50px;margin-bottom:80px;">
+        	<!-- angular-revolution as attribute in div -->
+	        <div rev-slider ng-if="slides"
+	          id="rev_slider"
+	          class="rev_slider"
+	          data-version="5.1.1RC"
+	          slider-Type="{{slider.sliderType}}"
+	          slider-Layout="{{slider.sliderLayout}}"
+	          responsive-Levels="{{slider.responsiveLevels}}"
+	          gridwidth="{{slider.gridwidth}}"
+	          gridheight="{{slider.gridheight}}"
+	          auto-Height="{{slider.autoHeight}}"
+	          min-Height="{{slider.minHeight}}"
+	          full-Screen-Offset-Container="{{slider.fullScreenOffsetContainer}}"
+	          full-Screen-Offset="{{slider.fullScreenOffset}}"
+	          delay="{{slider.delay}}"
+	          disable-Progress-Bar="{{slider.disableProgressBar}}"
+	          start-Delay="{{slider.startDelay}}"
+	          stop-After-Loops="{{slider.stopAfterLoops}}"
+	          stop-At-Slide="{{slider.stopAtSlide}}"
+	          view-Port="{{slider.viewPort}}"
+	          lazy-Type="{{slider.lazyType}}"
+	          dotted-Overlay="{{slider.dottedOverlay}}"
+	          shadow="{{slider.shadow}}"
+	          spinner="{{slider.spinner}}"
+	          hide-All-Caption-At-Lilmit="{{slider.hideAllCaptionAtLilmit}}"
+	          hide-Caption-At-Limit="{{slider.hideCaptionAtLimit}}"
+	          hide-Slider-At-Limit="{{slider.hideSliderAtLimit}}"
+	          debug-Mode="{{slider.debugMode}}"
+	          extensions="{{slider.extensions}}"
+	          extensionssuffix="{{slider.extensions_suffix}}"
+	          fallbacks="{{slider.fallbacks}}"
+	          parallax="{{slider.parallax}}"
+	          rev-Carousel="{{slider.carousel}}"
+	          navigation="{{slider.navigation}}"
+	          js-File-Location="{{slider.jsFileLocation}}"
+	          visibility-Levels="{{slider.visibilityLevels}}"
+	          hide-Thumbs-On-Mobile="{{slider.hideThumbsOnMobile}}"
+	          slides="slides"
+	          slider-Template-Url="templates/slider.tpl2.php"
+	        >
+	        </div>
+      	</div>
+    </section>
+</div>
+<div class="container" ng-if="seccionWeb">
 	<div class="row">
 		<div class="col-md-9">
 			<h3>{{seccionWeb[1].contenedor[0].titulo}}</h3>
@@ -19,3 +86,23 @@
 		</div><!-- col -->
 	</div><!-- row -->
 </div><!-- container -->
+<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1"  ng-if="seccionWeb">
+	<div class="full-section-container">
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-offset-5 col-sm-offset-1 col-md-7 col-sm-10">
+
+					<h2>{{seccionWeb[2].contenedor[0].titulo}}</h2>
+					<div ng-bind-html="seccionWeb[2].contenedor[0].contenido"></div>
+
+					<br>
+
+					<a href="templates/popups/donde-estamos.php" fancybox ng-show="seccionWeb[2].contenedor[0].tiene_boton" class="btn btn-default-1 waves"  >Donde estamos <i class="fa fa-angle-right"></i></a>
+
+				</div><!-- col -->
+			</div><!-- row -->
+		</div><!-- container-fluid -->
+
+	</div><!-- full-section-container -->
+</section><!-- full-section -->
