--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,4 @@
-/*
- *
- *		CUSTOM.CSS
- *
+/*	CUSTOM.CSS
  *	+ TYPOGRAPHY
  *	+ WAVES EFFECT
  * 	+ HEADLINE
@@ -41,6 +38,16 @@
  *	+ ANIMATIONS
  *	+ WIDGETS
  */
+/*
+* { outline: 2px dotted red }
+* * { outline: 2px dotted green }
+* * * { outline: 2px dotted orange }
+* * * * { outline: 2px dotted blue }
+* * * * * { outline: 1px solid red }
+* * * * * * { outline: 1px solid green }
+* * * * * * * { outline: 1px solid orange }
+* * * * * * * * { outline: 1px solid blue }
+*/
 
 /***********************************************************************************
  *	+ TYPOGRAPHY
@@ -353,7 +360,24 @@
 	.no-paddings {
 		padding: 0;
 	}
+	/* BACKGROUND COLORS */
+		.bg-lightgray {background-color: #e0e0e0 !important; }
+		.bg-lightblue {background-color: #dcedf5 !important;}
+	/* TEXTS COLORS */
+		.text-blue	{color: #119ef6;}
+		.text-black	{color: #1c2429;}
+		.text-red	{color: #dd191d;}
+		.text-green	{color: #038009;}
+		.text-gray	{color: #ccc;}
 
+	/* FONT SIZE´s */
+		.f-12{font-size: 12px;}
+		.f-14{font-size: 14px;}
+		.f-16{font-size: 16px;}
+		.f-18{font-size: 18px;}
+		.f-24{font-size: 24px;}
+	/* OTHERS */
+		.clear {clear: both;}
 	@media (min-width: 768px) and (max-width: 991px) {
 
 		h1 {
@@ -6730,7 +6754,7 @@
 
 	/* Helpers Margin */
 .m-n {
-  margin: 0px   		   !important;
+  margin: 0px !important;
 }
 .m-xs {
   margin: 4px !important;
@@ -6820,7 +6844,7 @@
   margin-bottom: -40px !important;
 }
 .ml-n {
-  margin-left: 0px 			  !important;
+  margin-left: 0px !important;
 }
 .ml-xs {
   margin-left: 4px !important;
