--- a/templates/seccion/servicios.html
+++ b/templates/seccion/servicios.html
@@ -4,7 +4,8 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-offset-1 col-lg-4 col-md-6 col-sm-10">
-					<h2>{{seccionWeb[2].contenedor[0].titulo}}</h2>
+					<h3>{{seccionWeb[2].contenedor[0].titulo}}</h2>
+					<h5><strong>{{seccionWeb[2].contenedor[0].subtitulo}}</strong></h5>
 					<div ng-bind-html="seccionWeb[2].contenedor[0].contenido"></div>
 				</div><!-- col -->
 			</div><!-- row -->
