--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -511,16 +511,21 @@
 	}
 
 	.alert.alert-danger {
-		background-color: #ff3369;
+		color: #a94442;
+	    background-color: #f2dede;
+	    border-color: #ebccd1;
 	}
 
 	.alert.alert-success {
-		background-color: #5939ff;
+		color: #3c763d;
+	    background-color: #dff0d8;
+	    border-color: #d6e9c6;
 	}
 
 	.alert.alert-warning {
-		background-color: #fdff33;
-		color: #464646;
+		color: #8a6d3b;
+	    background-color: #fcf8e3;
+	    border-color: #faebcc;
 	}
 
 /***********************************************************************************
