--- a/templates/blog.html
+++ b/templates/blog.html
@@ -22,7 +22,7 @@
 
 		</div><!-- page-header -->
 
-		<div class="container">
+		<div class="container" id="blog">
             <div class="row">
                 <div class="col-sm-9">
 
