--- a/admin/app/components/partials/header/header.html
+++ b/admin/app/components/partials/header/header.html
@@ -4,7 +4,7 @@
     <i class="fa fa-cog"></i>
   </button>
   <a class="navbar-brand" ui-sref="dashboard">
-    <img class="mb" src="assets/images/logo.png" alt="{{empresaNombre}}">
+    <img class="mb" src="../assets/images/logo-dark.png" alt="{{empresaNombre}}">
     <!-- <span><strong>MIN</strong>OTAUR</span> -->
   </a>
   <button type="button" class="navigation-toggle" id="navigation-toggle">
