--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -296,11 +296,11 @@
 	}
 
 	.text-default-color-1 {
-		color: #1574a6 !important;
+		color: #1574a6!important;
 	}
 
 	.text-default-color-2 {
-		color: #1574a6 !important;
+		color: #1574a6!important;
 	}
 
 	.text-highlight {
@@ -354,15 +354,15 @@
 
 	.last,
 	.no-margin-bottom {
-		margin-bottom: 0 !important;
+		margin-bottom: 0!important;
 	}
 
 	.no-paddings {
 		padding: 0;
 	}
 	/* BACKGROUND COLORS */
-		.bg-lightgray {background-color: #e0e0e0 !important; }
-		.bg-lightblue {background-color: #dcedf5 !important;}
+		.bg-lightgray {background-color: #e0e0e0!important; }
+		.bg-lightblue {background-color: #dcedf5!important;}
 	/* TEXTS COLORS */
 		.text-blue	{color: #119ef6;}
 		.text-black	{color: #1c2429;}
@@ -415,7 +415,7 @@
 		}
 
 		.last {
-			margin-bottom: 20px !important;
+			margin-bottom: 20px!important;
 		}
 
 		.shadow {
@@ -691,7 +691,7 @@
 
 	.btn:focus,
 	.btn:active {
-		outline: 0 !important;
+		outline: 0!important;
 		box-shadow: none;
 	}
 
@@ -1121,7 +1121,7 @@
 		}
 
 		.image-box .image-box-thumbnail {
-			max-height: 300px !important;
+			max-height: 300px!important;
 		}
 
 		.image-box + .image-box {
@@ -1913,7 +1913,7 @@
 	@media (max-width: 767px) {
 
 		.map {
-			height: 400px !important;
+			height: 400px!important;
 		}
 
 		.location-details {
@@ -2636,7 +2636,7 @@
 	}
 
 	.social-media.rounded a:hover {
-		color: #fff !important;
+		color: #fff!important;
 	}
 
 	.social-media.rounded a.facebook:hover { background-color: #0e59a0; }
@@ -3085,7 +3085,7 @@
 		}
 
 		.statistics-container #area-chart {
-			height: 150px !important;
+			height: 150px!important;
 		}
 
 	}
@@ -3689,7 +3689,7 @@
 	}
 
 	.date input {
-		background: #fff !important;
+		background: #fff!important;
 	}
 
 	.beatpicker {
@@ -4133,7 +4133,7 @@
 	/* PARALLAX */
 	.parallax {
 		background-attachment: fixed;
-		background-size: cover !important;
+		background-size: cover!important;
 	}
 
 	.parallax.parallax-disable {
@@ -5252,7 +5252,7 @@
 		.half-image-right {
 			position: relative;
 			width: 100%;
-			background-image: none !important;
+			background-image: none!important;
 		}
 
 		.half-image-right img,
@@ -5369,7 +5369,7 @@
 		.half-image-right {
 			position: relative;
 			width: 100%;
-			background-image: none !important;
+			background-image: none!important;
 		}
 
 		.half-image-right img,
@@ -5832,8 +5832,8 @@
 		}
 
 		.tp-bullets.custom {
-			top: auto !important;
-			bottom: -30px !important;
+			top: auto!important;
+			bottom: -30px!important;
 		}
 
 		.tp-caption .btn {
@@ -6036,7 +6036,7 @@
 	}
 
 	.fancybox-inner {
-		overflow: hidden !important;
+		overflow: hidden!important;
 	}
 
 /***********************************************************************************
@@ -6723,7 +6723,7 @@
 	    100% { transform: rotate(360deg); }
 	}
 	.no-border-radius{
-	  border-radius: 0 !important
+	  border-radius: 0!important
 	}
 	.block{
 	  position: relative;
@@ -6731,7 +6731,7 @@
 	.navbar-nav>li>a,
 	.navbar-nav>li>a:focus,
 	.navbar-nav>li>a:hover {
-	  background: none !important;
+	  background: none!important;
 	}
 	.navbar-nav>li>a::after {
 	  content: "";
@@ -6759,453 +6759,497 @@
 
 	/* Helpers Margin */
 .m-n {
-  margin: 0px !important;
+  margin: 0px!important;
 }
 .m-xs {
-  margin: 4px !important;
+  margin: 4px!important;
 }
 .m-xs.n {
-  margin: -4px !important;
+  margin: -4px!important;
 }
 .m-sm {
-  margin: 8px !important;
+  margin: 8px!important;
 }
 .m-sm.n {
-  margin: -8px !important;
+  margin: -8px!important;
 }
 .m {
-  margin: 12px !important;
+  margin: 12px!important;
 }
 .m.n {
-  margin: -12px !important;
+  margin: -12px!important;
 }
 .m-md {
-  margin: 16px !important;
+  margin: 16px!important;
 }
 .m-md.n {
-  margin: -16px !important;
+  margin: -16px!important;
 }
 .m-lg {
-  margin: 24px !important;
+  margin: 24px!important;
 }
 .m-lg.n {
-  margin: -24px !important;
+  margin: -24px!important;
 }
 .m-xl {
-  margin: 32px !important;
+  margin: 32px!important;
 }
 .m-xl.n {
-  margin: -32px !important;
+  margin: -32px!important;
 }
 .m-xxl {
-  margin: 40px !important;
+  margin: 40px!important;
 }
 .m-xxl.n {
-  margin: -40px !important;
+  margin: -40px!important;
 }
 .mb-n {
   margin-bottom: 0px!important;
 }
 .mb-xs {
-  margin-bottom: 4px !important;
+  margin-bottom: 4px!important;
 }
 .mb-xs.n {
-  margin-bottom: -4px !important;
+  margin-bottom: -4px!important;
 }
 .mb-sm {
-  margin-bottom: 8px !important;
+  margin-bottom: 8px!important;
 }
 .mb-sm.n {
-  margin-bottom: -8px !important;
+  margin-bottom: -8px!important;
 }
 .mb {
-  margin-bottom: 12px !important;
+  margin-bottom: 12px!important;
 }
 .mb.n {
-  margin-bottom: -12px !important;
+  margin-bottom: -12px!important;
 }
 .mb-md {
-  margin-bottom: 16px !important;
+  margin-bottom: 16px!important;
 }
 .mb-md.n {
-  margin-bottom: -16px !important;
+  margin-bottom: -16px!important;
 }
 .mb-lg {
-  margin-bottom: 24px !important;
+  margin-bottom: 24px!important;
 }
 .mb-lg.n {
-  margin-bottom: -24px !important;
+  margin-bottom: -24px!important;
 }
 .mb-xl {
-  margin-bottom: 32px !important;
+  margin-bottom: 32px!important;
 }
 .mb-xl.n {
-  margin-bottom: -32px !important;
+  margin-bottom: -32px!important;
 }
 .mb-xxl {
-  margin-bottom: 40px !important;
+  margin-bottom: 40px!important;
 }
 .mb-xxl.n {
-  margin-bottom: -40px !important;
+  margin-bottom: -40px!important;
 }
 .ml-n {
-  margin-left: 0px !important;
+  margin-left: 0px!important;
 }
 .ml-xs {
-  margin-left: 4px !important;
+  margin-left: 4px!important;
 }
 .ml-xs.n {
-  margin-left: -4px !important;
+  margin-left: -4px!important;
 }
 .ml-sm {
-  margin-left: 8px !important;
+  margin-left: 8px!important;
 }
 .ml-sm.n {
-  margin-left: -8px !important;
+  margin-left: -8px!important;
 }
 .ml {
-  margin-left: 12px !important;
+  margin-left: 12px!important;
 }
 .ml.n {
-  margin-left: -12px !important;
+  margin-left: -12px!important;
 }
 .ml-md {
-  margin-left: 16px !important;
+  margin-left: 16px!important;
 }
 .ml-md.n {
-  margin-left: -16px !important;
+  margin-left: -16px!important;
 }
 .ml-lg {
-  margin-left: 24px !important;
+  margin-left: 24px!important;
 }
 .ml-lg.n {
-  margin-left: -24px !important;
+  margin-left: -24px!important;
 }
 .ml-xl {
-  margin-left: 32px !important;
+  margin-left: 32px!important;
 }
 .ml-xl.n {
-  margin-left: -32px !important;
+  margin-left: -32px!important;
 }
 .ml-xxl {
-  margin-left: 40px !important;
+  margin-left: 40px!important;
 }
 .ml-xxl.n {
-  margin-left: -40px !important;
+  margin-left: -40px!important;
 }
 .mr-n {
-  margin-right: 0px 			  !important;
+  margin-right: 0px !important;
 }
 .mr-xs {
-  margin-right: 4px !important;
+  margin-right: 4px!important;
 }
 .mr-xs.n {
-  margin-right: -4px !important;
+  margin-right: -4px!important;
 }
 .mr-sm {
-  margin-right: 8px !important;
+  margin-right: 8px!important;
 }
 .mr-sm.n {
-  margin-right: -8px !important;
+  margin-right: -8px!important;
 }
 .mr {
-  margin-right: 12px !important;
+  margin-right: 12px!important;
 }
 .mr.n {
-  margin-right: -12px !important;
+  margin-right: -12px!important;
 }
 .mr-md {
-  margin-right: 16px !important;
+  margin-right: 16px!important;
 }
 .mr-md.n {
-  margin-right: -16px !important;
+  margin-right: -16px!important;
 }
 .mr-lg {
-  margin-right: 24px !important;
+  margin-right: 24px!important;
 }
 .mr-lg.n {
-  margin-right: -24px !important;
+  margin-right: -24px!important;
 }
 .mr-xl {
-  margin-right: 32px !important;
+  margin-right: 32px!important;
 }
 .mr-xl.n {
-  margin-right: -32px !important;
+  margin-right: -32px!important;
 }
 .mr-xxl {
-  margin-right: 40px !important;
+  margin-right: 40px!important;
 }
 .mr-xxl.n {
-  margin-right: -40px !important;
+  margin-right: -40px!important;
 }
 .mt-n {
-  margin-top: 0px			 !important;
+  margin-top: 0px			!important;
 }
 .mt-xs {
-  margin-top: 4px !important;
+  margin-top: 4px!important;
 }
 .mt-xs.n {
-  margin-top: -4px !important;
+  margin-top: -4px!important;
 }
 .mt-sm {
-  margin-top: 8px !important;
+  margin-top: 8px!important;
 }
 .mt-sm.n {
-  margin-top: -8px !important;
+  margin-top: -8px!important;
 }
 .mt {
-  margin-top: 12px !important;
+  margin-top: 12px!important;
 }
 .mt.n {
-  margin-top: -12px !important;
+  margin-top: -12px!important;
 }
 .mt-md {
-  margin-top: 16px !important;
+  margin-top: 16px!important;
 }
 .mt-md.n {
-  margin-top: -16px !important;
+  margin-top: -16px!important;
 }
 .mt-lg {
-  margin-top: 24px !important;
+  margin-top: 24px!important;
 }
 .mt-lg.n {
-  margin-top: -24px !important;
+  margin-top: -24px!important;
 }
 .mt-xl {
-  margin-top: 32px !important;
+  margin-top: 32px!important;
 }
 .mt-xl.n {
-  margin-top: -32px !important;
+  margin-top: -32px!important;
 }
 .mt-xxl {
-  margin-top: 40px !important;
+  margin-top: 40px!important;
 }
 .mt-xxl.n {
-  margin-top: -40px !important;
+  margin-top: -40px!important;
 }
 /* Paddiing */
 .p-n {
-  padding: 0px   		 	 !important;
+  padding: 0px   		 	!important;
 }
 .p-xs {
-  padding: 4px !important;
+  padding: 4px!important;
 }
 .p-xs.n {
-  padding: -4px !important;
+  padding: -4px!important;
 }
 .p-sm {
-  padding: 8px !important;
+  padding: 8px!important;
 }
 .p-sm.n {
-  padding: -8px !important;
+  padding: -8px!important;
 }
 .p {
-  padding: 12px !important;
+  padding: 12px!important;
 }
 .p.n {
-  padding: -12px !important;
+  padding: -12px!important;
 }
 .p-md {
-  padding: 16px !important;
+  padding: 16px!important;
 }
 .p-md.n {
-  padding: -16px !important;
+  padding: -16px!important;
 }
 .p-lg {
-  padding: 24px !important;
+  padding: 24px!important;
 }
 .p-lg.n {
-  padding: -24px !important;
+  padding: -24px!important;
 }
 .p-xl {
-  padding: 32px !important;
+  padding: 32px!important;
 }
 .p-xl.n {
-  padding: -32px !important;
+  padding: -32px!important;
 }
 .p-xxl {
-  padding: 40px !important;
+  padding: 40px!important;
 }
 .p-xxl.n {
-  padding: -40px !important;
+  padding: -40px!important;
 }
 .pb-n {
-  padding-bottom: 0px   		  	  !important;
+  padding-bottom: 0px   		  	 !important;
 }
 .pb-xs {
-  padding-bottom: 4px !important;
+  padding-bottom: 4px!important;
 }
 .pb-xs.n {
-  padding-bottom: -4px !important;
+  padding-bottom: -4px!important;
 }
 .pb-sm {
-  padding-bottom: 8px !important;
+  padding-bottom: 8px!important;
 }
 .pb-sm.n {
-  padding-bottom: -8px !important;
+  padding-bottom: -8px!important;
 }
 .pb {
-  padding-bottom: 12px !important;
+  padding-bottom: 12px!important;
 }
 .pb.n {
-  padding-bottom: -12px !important;
+  padding-bottom: -12px!important;
 }
 .pb-md {
-  padding-bottom: 16px !important;
+  padding-bottom: 16px!important;
 }
 .pb-md.n {
-  padding-bottom: -16px !important;
+  padding-bottom: -16px!important;
 }
 .pb-lg {
-  padding-bottom: 24px !important;
+  padding-bottom: 24px!important;
 }
 .pb-lg.n {
-  padding-bottom: -24px !important;
+  padding-bottom: -24px!important;
 }
 .pb-xl {
-  padding-bottom: 32px !important;
+  padding-bottom: 32px!important;
 }
 .pb-xl.n {
-  padding-bottom: -32px !important;
+  padding-bottom: -32px!important;
 }
 .pb-xxl {
-  padding-bottom: 40px !important;
+  padding-bottom: 40px!important;
 }
 .pb-xxl.n {
-  padding-bottom: -40px !important;
+  padding-bottom: -40px!important;
 }
 .pl-n {
-  padding-left: 0px 			!important;
+  padding-left: 0px!important;
 }
 .pl-xs {
-  padding-left: 4px !important;
+  padding-left: 4px!important;
 }
 .pl-xs.n {
-  padding-left: -4px !important;
+  padding-left: -4px!important;
 }
 .pl-sm {
-  padding-left: 8px !important;
+  padding-left: 8px!important;
 }
 .pl-sm.n {
-  padding-left: -8px !important;
+  padding-left: -8px!important;
 }
 .pl {
-  padding-left: 12px !important;
+  padding-left: 12px!important;
 }
 .pl.n {
-  padding-left: -12px !important;
+  padding-left: -12px!important;
 }
 .pl-md {
-  padding-left: 16px !important;
+  padding-left: 16px!important;
 }
 .pl-md.n {
-  padding-left: -16px !important;
+  padding-left: -16px!important;
 }
 .pl-lg {
-  padding-left: 24px !important;
+  padding-left: 24px!important;
 }
 .pl-lg.n {
-  padding-left: -24px !important;
+  padding-left: -24px!important;
 }
 .pl-xl {
-  padding-left: 32px !important;
+  padding-left: 32px!important;
 }
 .pl-xl.n {
-  padding-left: -32px !important;
+  padding-left: -32px!important;
 }
 .pl-xxl {
-  padding-left: 40px !important;
+  padding-left: 40px!important;
 }
 .pl-xxl.n {
-  padding-left: -40px !important;
+  padding-left: -40px!important;
 }
 .pr-n {
-  padding-right: 0px 			 !important;
+  padding-right: 0px!important;
 }
 .pr-xs {
-  padding-right: 4px !important;
+  padding-right: 4px!important;
 }
 .pr-xs.n {
-  padding-right: -4px !important;
+  padding-right: -4px!important;
 }
 .pr-sm {
-  padding-right: 8px !important;
+  padding-right: 8px!important;
 }
 .pr-sm.n {
-  padding-right: -8px !important;
+  padding-right: -8px!important;
 }
 .pr {
-  padding-right: 12px !important;
+  padding-right: 12px!important;
 }
 .pr.n {
-  padding-right: -12px !important;
+  padding-right: -12px!important;
 }
 .pr-md {
-  padding-right: 16px !important;
+  padding-right: 16px!important;
 }
 .pr-md.n {
-  padding-right: -16px !important;
+  padding-right: -16px!important;
 }
 .pr-lg {
-  padding-right: 24px !important;
+  padding-right: 24px!important;
 }
 .pr-lg.n {
-  padding-right: -24px !important;
+  padding-right: -24px!important;
 }
 .pr-xl {
-  padding-right: 32px !important;
+  padding-right: 32px!important;
 }
 .pr-xl.n {
-  padding-right: -32px !important;
+  padding-right: -32px!important;
 }
 .pr-xxl {
-  padding-right: 40px !important;
+  padding-right: 40px!important;
 }
 .pr-xxl.n {
-  padding-right: -40px !important;
+  padding-right: -40px!important;
 }
 .pt-n {
-  padding-top: 0px			   !important;
+  padding-top: 0px!important;
 }
 .pt-xs {
-  padding-top: 4px !important;
+  padding-top: 4px!important;
 }
 .pt-xs.n {
-  padding-top: -4px !important;
+  padding-top: -4px!important;
 }
 .pt-sm {
-  padding-top: 8px !important;
+  padding-top: 8px!important;
 }
 .pt-sm.n {
-  padding-top: -8px !important;
+  padding-top: -8px!important;
 }
 .pt {
-  padding-top: 12px !important;
+  padding-top: 12px!important;
 }
 .pt.n {
-  padding-top: -12px !important;
+  padding-top: -12px!important;
 }
 .pt-md {
-  padding-top: 16px !important;
+  padding-top: 16px!important;
 }
 .pt-md.n {
-  padding-top: -16px !important;
+  padding-top: -16px!important;
 }
 .pt-lg {
-  padding-top: 24px !important;
+  padding-top: 24px!important;
 }
 .pt-lg.n {
-  padding-top: -24px !important;
+  padding-top: -24px!important;
 }
 .pt-xl {
-  padding-top: 32px !important;
+  padding-top: 32px!important;
 }
 .pt-xl.n {
-  padding-top: -32px !important;
+  padding-top: -32px!important;
 }
 .pt-xxl {
-  padding-top: 40px !important;
+  padding-top: 40px!important;
 }
 .pt-xxl.n {
-  padding-top: -40px !important;
+  padding-top: -40px!important;
+}
+/* blog */
+.homepage-community-wrapper{margin-right:auto;margin-left:auto;padding-left:15px;padding-right:15px}
+@media (min-width:768px){
+	.homepage-community-wrapper{width:750px}
+}
+@media (min-width:992px){
+	.homepage-community-wrapper{width:970px}
+}
+@media (min-width:1200px){
+	.homepage-community-wrapper{width:1170px}
+}
+.homepage-community-items-footer{width:100%;text-align:center;margin-top:40px}
+.homepage-community-items-wrapper{
+	position:fixed;left:-9999px;margin-top:70px;
+	-ms-flex-align:start;
+	align-items:flex-start;
+	-ms-flex-direction:column;
+	flex-direction:column}
+@media (max-width:991px){
+	.homepage-community-items-wrapper{-ms-flex-wrap:wrap;flex-wrap:wrap}
+}
+.homepage-community-item{position:relative;min-height:1px;padding-left:15px;padding-right:15px;padding:0 15px;max-width:100%;display:-ms-flexbox;display:flex}
+@media (min-width:992px){
+ 	.homepage-community-item{float:left;width:33.33333333%}
+}
+@media (min-width:768px){
+ 	.homepage-community-item{width:33.33333333%}
+}
+@media (max-width:767px){
+ 	.homepage-community-item{width:100%;margin-bottom:30px}
+ 	.homepage-community-item:last-child{margin-bottom:0}
+}
+.homepage-community-item-interior{padding:30px 20px 34px 20px;background-color:rgba(255,255,255,0.8);width:100%}
+@media (min-width:768px){.homepage-community-item-interior{display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;-ms-flex-pack:justify;justify-content:space-between}
+}
+ .homepage-community-item-interior a{font-style:italic;color:#31a1b9}
+ .homepage-community-item-date{color:#7258a3;font-weight:600;font-size:2.592rem}
+ a.homepage-community-item-title{font-style:italic;color:#415970}
+ a.homepage-community-item-title:hover{text-decoration:none}
+ .homepage-community p,.homepage-community h2,.homepage-community h3,.homepage-community-item-interior{max-width:100%}
+
+ .home-toggle-area-active{position:relative;left:auto;display:-ms-flexbox;display:flex;width:auto}
+ @media (min-width:768px){.homepage-community-items-interior{display:-ms-flexbox;display:flex;width:100%}
 }
