noticias_web todas

--- a/templates/seccion/inicio.html
+++ b/templates/seccion/inicio.html
@@ -95,17 +95,16 @@
 					<div ng-bind-html="seccionWeb[1].contenedor[1].contenido"></div>
 
 					<br>
-					<div id="inline" style="display:none;width:500px;">
+					<div id="inline" style="display:none;width:100%;">
 						<h2>Donde Estamos</h2>
-					    <div class="container">
 							<div class="row">
-								<div class="col-sm-7">
+								<div class="col-md-8 col-sm-12">
 								<iframe src="templates/popups/donde-estamos.php" width="600" height="400"></iframe>
 
 
 
 								</div><!-- col -->
-								<div class="col-sm-3">
+								<div class="col-md-4 col-sm-12">
 									<h5 class="text-uppercase"><strong>Información de Contacto</strong></h5>
 									<br>
 									<div class="widget widget-contact no-margin-bottom">
@@ -130,7 +129,6 @@
 									</div><!-- widget-contact -->
 								</div>
 							</div><!-- row -->
-						</div><!-- container -->
 					</div>
 					<!-- <a href="templates/popups/donde-estamos.php" fancybox ng-show="seccionWeb[1].contenedor[1].tiene_boton" class="btn btn-default-1 waves"  >Donde estamos <i class="fa fa-angle-right"></i></a> -->
 					<a href="#inline" fancybox ng-show="seccionWeb[1].contenedor[1].tiene_boton" class="btn btn-default-1 waves"  >Donde estamos <i class="fa fa-angle-right"></i></a>
