--- a/templates/seccion/inicio.html
+++ b/templates/seccion/inicio.html
@@ -15,11 +15,11 @@
 	}
 
 </style>
-<div class="container-fluid block" data-ng-style="{'max-width':'5120px'}">
+<div class="container-fluid block" data-ng-style="{'max-width':'5120px'}" >
     <!-- slider parent container -->
     <section class="content-section" data-ng-style="{'max-width':'5120px', 'margin':'0 auto'}">
       <!-- slider container -->
-		<div class="rev_slider_wrapper" style="background-color:#ddd;margin:0px auto;padding:0px;margin-top:50px;margin-bottom:80px;">
+		<div class="rev_slider_wrapper" style="background-color:#678;margin:0px auto;padding:0px;margin-top:50px;margin-bottom:80px;">
         	<!-- angular-revolution as attribute in div -->
 	        <div rev-slider ng-if="slides"
 	          id="rev_slider"
